--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,21 @@
           <artifactId>guava</artifactId>
           <version>23.0</version>
       </dependency>
+      <!-- redis -->
+      <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-data-redis</artifactId>
+          <exclusions>
+              <exclusion>
+                  <groupId>io.lettuce</groupId>
+                  <artifactId>lettuce-core</artifactId>
+              </exclusion>
+          </exclusions>
+      </dependency>
+      <dependency>
+          <groupId>redis.clients</groupId>
+          <artifactId>jedis</artifactId>
+      </dependency>
   </dependencies>
 <!--  插件  -->
     <build>
