--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,7 +28,11 @@ spring.redis.lettuce.pool.min-idle=0
 spring.redis.timeout=30000
 spring.cache.type=redis
 
-
+#rabbitmq
+spring.rabbitmq.host=39.103.187.139
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=root
+spring.rabbitmq.password=admin
 
 #监听接口信息
 ezprofiler.basepackage=com.java
