--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,20 @@
 server.port=8088
 
 #database
-spring.datasource.url=jdbc:mysql://172.19.50.119:3306/seckill1?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
-#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/seckill1?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://172.19.50.119:3306/seckill1?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/seckill1?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 #spring.datasource.url=jdbc:mysql://39.103.137.8:3306/seckill1?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+#thymeleaf
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.cache=false
+spring.thymeleaf.servlet.content-type=text/html
+
+#server.servlet.context-path=/thymeleaf
 
 #数据库池
 spring.mvc.async.request-timeout=30000
@@ -19,7 +27,7 @@ spring.datasource.hikari.login-timeout=5
 spring.redis.database=0
 spring.redis.port=6379
 spring.redis.password=
-spring.redis.host=172.19.50.122
+spring.redis.host=127.0.0.1
 #spring.redis.host=39.103.187.139
 spring.redis.lettuce.pool.max-active=25
 spring.redis.lettuce.pool.max-wait=-1
@@ -30,10 +38,10 @@ spring.cache.type=redis
 
 #rabbitmq
 #spring.rabbitmq.host=39.103.187.139
-spring.rabbitmq.host=172.19.50.122
+spring.rabbitmq.host=127.0.0.1
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=root
-spring.rabbitmq.password=admin
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
 
 #监听接口信息
 ezprofiler.basepackage=com.java
