--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,6 +43,10 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
+##canal
+canal.server=127.0.0.1:11111
+canal.destination=example
+
 #监听接口信息
 ezprofiler.basepackage=com.java
 ezprofiler.enableBasic=true
